--- a/app/src/main/res/layout/activity_inizio.xml
+++ b/app/src/main/res/layout/activity_inizio.xml
@@ -9,18 +9,17 @@
         app:layoutDescription="@xml/activity_inizio_scene">
 
     <VideoView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/videoView"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintVertical_bias="0.0"
-            android:scaleX="1.4"
-            android:scaleY="1.5"
-            android:background="@color/black_overlay"/>
+        android:id="@+id/videoView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@color/black_overlay"
+        android:scaleX="1.4"
+        android:scaleY="1.5"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
 
     <Button
             android:text="ACCEDI"
@@ -44,44 +43,42 @@
             android:fontFamily="sans-serif"
             app:layout_constraintBottom_toTopOf="@+id/btAccesso"
             android:layout_marginBottom="20dp"/>
-    <TextView
-            android:layout_width="377dp"
-            android:layout_height="79dp" android:id="@+id/textView9"
-            android:text="@string/inizio" android:textStyle="bold|italic"
-            android:textAlignment="center" android:textAppearance="@style/TextoOlvidasteyRegistro"
-            android:textSize="24sp" app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:textColor="@color/white"
-            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="220dp"
-            app:layout_constraintHorizontal_bias="0.529"/>
+
     <ImageView
-            android:src="@drawable/color_logo_no_background_logo"
-            android:layout_width="247dp"
-            android:layout_height="124dp" android:id="@+id/imageView5"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="20dp" app:layout_constraintBottom_toTopOf="@+id/imageView70"
-            app:layout_constraintVertical_bias="0.222" app:layout_constraintHorizontal_bias="0.493"/>
+        android:id="@+id/imageView5"
+        android:layout_width="1035dp"
+        android:layout_height="334dp"
+        android:layout_marginBottom="76dp"
+        android:src="@drawable/color_logo_no_background_logo"
+        app:layout_constraintBottom_toTopOf="@+id/btInizia"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
     <ImageView
-            android:layout_width="369dp"
-            android:layout_height="121dp" app:srcCompat="@drawable/color_logo_no_background_solo_scritta"
-            android:id="@+id/imageView70"
-            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toTopOf="@+id/textView9"/>
+        android:id="@+id/imageView70"
+        android:layout_width="402dp"
+        android:layout_height="133dp"
+        android:layout_marginTop="44dp"
+        app:layout_constraintBottom_toTopOf="@+id/imageView5"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.38"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/videoView"
+        app:layout_constraintVertical_bias="0.0"
+        app:srcCompat="@drawable/color_logo_no_background_solo_scritta" />
 
     <ProgressBar
-            style="?android:attr/progressBarStyle"
-            android:layout_width="67dp"
-            android:layout_height="68dp"
-            android:id="@+id/ProgressBar01"
-            android:layout_centerInParent="true"
-            android:indeterminate="true"
-            android:indeterminateDrawable="@drawable/progress_bg_white"
-            android:progress="0"
-            app:layout_constraintBottom_toTopOf="@+id/btInizia"
-            app:layout_constraintTop_toBottomOf="@+id/textView9"
-            app:layout_constraintEnd_toEndOf="@+id/videoView"
-            app:layout_constraintStart_toStartOf="@+id/videoView"/>
+        android:id="@+id/ProgressBar01"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="67dp"
+        android:layout_height="68dp"
+        android:layout_centerInParent="true"
+        android:indeterminate="true"
+        android:indeterminateDrawable="@drawable/progress_bg_white"
+        android:progress="0"
+        app:layout_constraintBottom_toTopOf="@+id/btInizia"
+        app:layout_constraintEnd_toEndOf="@+id/videoView"
+        app:layout_constraintStart_toStartOf="@+id/videoView" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
