--- a/app/src/main/res/layout/activity_dettagli_ricetta.xml
+++ b/app/src/main/res/layout/activity_dettagli_ricetta.xml
@@ -9,7 +9,7 @@
     tools:context=".ActivityDettagliRicetta">
 
     <androidx.appcompat.widget.Toolbar
-        app:title="Dettagli Ricetta"
+        app:title="Receipe Details"
         app:titleTextColor="@color/white"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"/>
@@ -23,7 +23,7 @@
             android:layout_height="wrap_content">
             <TextView
                 android:id="@+id/textView_nome_ricetta"
-                android:text="Nome Ricetta"
+                android:text="Receipe Name"
                 android:textSize="20sp"
                 android:gravity="center"
                 android:textColor="@color/white"
@@ -49,7 +49,7 @@
                 android:layout_height="250dp"/>
             <TextView
                 android:id="@+id/textView_descrizione_ricetta"
-                android:text="Descrizione"
+                android:text="Description"
                 android:textSize="14sp"
                 android:textColor="@color/white"
                 android:maxLines="5"
@@ -59,7 +59,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
             <TextView
-                android:text="Ingredienti"
+                android:text="Ingredients"
                 android:textStyle="bold"
                 android:textColor="@color/white"
                 android:textSize="18sp"
@@ -77,7 +77,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
             <TextView
-                android:text="Ricette simili, se questa non ti convince:"
+                android:text="Similar receipes, if this doesn’t convince you:"
                 android:textStyle="bold"
                 android:textColor="@color/white"
                 android:textSize="18sp"
@@ -89,7 +89,6 @@
                 android:layout_margin="8dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
-
         </LinearLayout>
     </ScrollView>
 </LinearLayout>
