--- a/app/src/main/res/layout/activity_home2.xml
+++ b/app/src/main/res/layout/activity_home2.xml
@@ -31,18 +31,49 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <androidx.appcompat.widget.Toolbar
+        android:id="@+id/agg_toolbar"
         android:layout_width="match_parent"
         android:layout_height="60dp"
+        android:background="@color/orange_primary"
         android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
-        android:id="@+id/agg_toolbar"
-        app:title="Benvenuto in FitTracker!"
-        android:background="@color/green_primary"
-        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:menu="@menu/toolbar_menu"
+        app:collapseIcon="@drawable/logo"
         app:layout_constraintEnd_toEndOf="parent"
-        />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:menu="@menu/toolbar_menu"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+        app:title="LetMeBeYourChef!">
+
+        <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+            <ImageButton
+                android:id="@+id/toolbar_button"
+                style="@style/Widget.AppCompat.Button.Borderless"
+                android:layout_width="63dp"
+                android:layout_height="match_parent"
+                android:layout_alignParentStart="true"
+                android:layout_marginStart="-14dp"
+                android:layout_marginEnd="14dp"
+                android:layout_toStartOf="@+id/toolbar_title"
+                android:scaleType="fitStart"
+                android:src="@drawable/logo" />
+
+            <TextView
+                android:id="@+id/toolbar_title"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_alignParentEnd="true"
+                android:layout_marginEnd="61dp"
+                android:fontFamily="@font/audiowide"
+                android:gravity="center"
+                android:text="LetMeBeYourChef!"
+                android:textColor="@android:color/white"
+                android:textSize="20dp"
+                android:textStyle="bold" />
+        </RelativeLayout>
+    </androidx.appcompat.widget.Toolbar>
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/nav_host_fragment"
