--- a/app/src/main/res/layout/fragment_ricette_preferite.xml
+++ b/app/src/main/res/layout/fragment_ricette_preferite.xml
@@ -55,7 +55,7 @@
 
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recycler_preferiti"
+            android:id="@+id/recycler_ricette_preferite"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_margin="4dp"
