--- a/app/src/main/res/layout/list_ricette_preferite.xml
+++ b/app/src/main/res/layout/list_ricette_preferite.xml
@@ -102,6 +102,7 @@
             android:layout_marginTop="10dp"
             >
             <Button
+                android:id="@+id/show_btn"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Show"
@@ -110,6 +111,7 @@
                 />
 
             <Button
+                android:id="@+id/delete_btn"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="20dp"
