--- a/app/src/main/res/layout/fragment_ricette_preferite.xml
+++ b/app/src/main/res/layout/fragment_ricette_preferite.xml
@@ -22,7 +22,8 @@
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0"/>
+            app:layout_constraintVertical_bias="0.0"
+            android:layout_marginBottom="50dp"/>
         <LinearLayout
             android:layout_marginTop="10dp"
             android:layout_marginBottom="15dp"
