--- a/app/src/main/res/layout/list_ricette_preferite.xml
+++ b/app/src/main/res/layout/list_ricette_preferite.xml
@@ -1,128 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:cardBackgroundColor="@color/white"
-    android:id="@+id/favourite_list_container"
-    android:elevation="8dp"
-    android:layout_margin="8dp">
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-        <TextView
-            android:id="@+id/textView_title"
-            android:text="Plate name"
-            android:singleLine="true"
-            android:ellipsize="marquee"
-            android:marqueeRepeatLimit="marquee_forever"
-            android:scrollHorizontally="true"
-            android:textStyle="bold"
-            android:textColor="@color/orange"
-            android:textSize="22sp"
-            android:padding="8dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-
-        <ImageView
-            android:id="@+id/imageView_food"
-            android:scaleType="centerCrop"
-            android:layout_margin="8dp"
-            android:layout_width="match_parent"
-            android:layout_height="200dp"/>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-            <LinearLayout
-                android:orientation="vertical"
-                android:gravity="center"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1">
-                <ImageView
-                    android:src="@drawable/ic_porzioni"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
-                <TextView
-                    android:id="@+id/textView_porzioni"
-                    android:textSize="14sp"
-                    android:padding="8dp"
-                    android:text="2 people"
-                    android:textColor="@color/black"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
-            </LinearLayout>
-            <LinearLayout
-                android:orientation="vertical"
-                android:gravity="center"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1">
-                <ImageView
-                    android:src="@drawable/ic_likes"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
-                <TextView
-                    android:id="@+id/textView_likes"
-                    android:textSize="14sp"
-                    android:padding="8dp"
-                    android:text="2 likes"
-                    android:textColor="@color/black"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
-            </LinearLayout>
-            <LinearLayout
-                android:orientation="vertical"
-                android:gravity="center"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1">
-                <ImageView
-                    android:src="@drawable/ic_tempo"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
-                <TextView
-                    android:id="@+id/textView_tempo"
-                    android:textSize="14sp"
-                    android:padding="8dp"
-                    android:text="2 minutes"
-                    android:textColor="@color/black"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
-            </LinearLayout>
-            </LinearLayout>
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_gravity="center"
-            android:layout_marginTop="10dp"
-            >
-
-            <Button
-                android:id="@+id/show_btn"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="20dp"
-                android:layout_weight="1"
-                android:text="Show"
-                app:icon="@drawable/ic_search" />
-
-            <Button
-                android:id="@+id/delete_btn"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="20dp"
-                android:layout_weight="1"
-                android:backgroundTint="@color/red"
-                android:shadowColor="@color/red"
-                android:text="Delete"
-                app:icon="@drawable/ic_dontlike" />
-        </LinearLayout>
-        </LinearLayout>
-
-
-</androidx.cardview.widget.CardView>
+version https://git-lfs.github.com/spec/v1
+oid sha256:47563ec7c629229dfc184f525b10978b44f19abced015025b891391317488d38
+size 5372
