--- a/app/src/main/res/layout/list_ingredienti_preferiti.xml
+++ b/app/src/main/res/layout/list_ingredienti_preferiti.xml
@@ -1,87 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:cardBackgroundColor="@color/white"
-    android:id="@+id/ingredients_list_container"
-    app:cardElevation="8dp"
-    android:layout_margin="8dp"
-    android:layout_gravity="center_horizontal">
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="center_horizontal">
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:gravity="center_horizontal">
-        <TextView
-            android:id="@+id/textView_quantita_ingredienti"
-            android:text="You have"
-            android:singleLine="true"
-            android:ellipsize="marquee"
-            android:marqueeRepeatLimit="marquee_forever"
-            android:scrollHorizontally="true"
-            android:textColor="@color/black"
-            android:textAlignment="center"
-            android:textSize="16sp"
-            android:padding="4dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-        <ImageView
-            android:id="@+id/imageView_ingredienti"
-            android:scaleType="center"
-            android:layout_width="80dp"
-            android:layout_height="50dp"/>
-        <TextView
-            android:id="@+id/textView_nome_ingredienti"
-            android:text="Pollo"
-            android:singleLine="true"
-            android:ellipsize="marquee"
-            android:marqueeRepeatLimit="marquee_forever"
-            android:scrollHorizontally="true"
-            android:textSize="16sp"
-            android:textAlignment="center"
-            android:textColor="@color/black"
-            android:textStyle="bold"
-            android:padding="4dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-    </LinearLayout>
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_gravity="center"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
-            android:layout_marginStart="20dp"
-            >
-
-            <Button
-                android:id="@+id/add_btn"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="20dp"
-                android:layout_weight="1"
-                android:text="Add to storage"
-
-                app:icon="@drawable/ic_cucina" />
-
-            <Button
-                android:id="@+id/delete_btn"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="20dp"
-                android:layout_weight="1"
-                android:backgroundTint="@color/red"
-                android:shadowColor="@color/red"
-                android:text="Don't like it anymore"
-                app:icon="@drawable/cuore_spezzato" />
-        </LinearLayout>
-    </LinearLayout>
-
-</androidx.cardview.widget.CardView>
+version https://git-lfs.github.com/spec/v1
+oid sha256:a3332711e74bce945ba7851913a8328d147c479ef9b2dd87a422e9e3ca387c74
+size 3557
