--- a/app/src/main/res/layout/list_ingredienti_ricette.xml
+++ b/app/src/main/res/layout/list_ingredienti_ricette.xml
@@ -1,47 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:cardBackgroundColor="@color/white"
-    app:cardElevation="8dp"
-    android:layout_margin="8dp">
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-        <TextView
-            android:id="@+id/textView_quantita_ingredienti"
-            android:text="1 pc"
-            android:singleLine="true"
-            android:ellipsize="marquee"
-            android:marqueeRepeatLimit="marquee_forever"
-            android:scrollHorizontally="true"
-            android:textColor="@color/black"
-            android:textAlignment="center"
-            android:textSize="16sp"
-            android:padding="4dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-        <ImageView
-            android:id="@+id/imageView_ingredienti"
-            android:scaleType="center"
-            android:layout_width="80dp"
-            android:layout_height="50dp"/>
-        <TextView
-            android:id="@+id/textView_nome_ingredienti"
-            android:text="Pollo"
-            android:singleLine="true"
-            android:ellipsize="marquee"
-            android:marqueeRepeatLimit="marquee_forever"
-            android:scrollHorizontally="true"
-            android:textSize="16sp"
-            android:textAlignment="center"
-            android:textColor="@color/black"
-            android:textStyle="bold"
-            android:padding="4dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-    </LinearLayout>
-
-</androidx.cardview.widget.CardView>
+version https://git-lfs.github.com/spec/v1
+oid sha256:97075dc82fbaaa24650517d8d143588df7d4c9eeff55e3b3aff9a9c5bf072572
+size 1980
