--- a/app/src/main/res/layout/list_ricette_simili.xml
+++ b/app/src/main/res/layout/list_ricette_simili.xml
@@ -1,49 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:cardBackgroundColor="@color/white"
-    android:elevation="8dp"
-    android:layout_margin="8dp"
-    android:id="@+id/ricette_simili_holder">
-    <LinearLayout
-        android:orientation="vertical"
-        android:gravity="center"
-        android:layout_margin="4dp"
-        android:layout_width="150dp"
-        android:layout_height="wrap_content">
-        <TextView
-            android:id="@+id/textView_simili_titolo"
-            android:text="Similar name"
-            android:textStyle="bold"
-            android:textColor="@color/orange"
-            android:padding="8dp"
-            android:textAlignment="center"
-            android:singleLine="true"
-            android:ellipsize="marquee"
-            android:marqueeRepeatLimit="marquee_forever"
-            android:scrollHorizontally="true"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-        <ImageView
-            android:id="@+id/imageView_simili"
-            android:scaleType="centerCrop"
-            android:layout_width="match_parent"
-            android:layout_height="60dp"/>
-        <TextView
-            android:id="@+id/textView_simili_porzione"
-            android:text="Similar name"
-            android:textStyle="italic"
-            android:textColor="@color/black"
-            android:padding="8dp"
-            android:textAlignment="center"
-            android:singleLine="true"
-            android:ellipsize="marquee"
-            android:marqueeRepeatLimit="marquee_forever"
-            android:scrollHorizontally="true"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-    </LinearLayout>
-
-</androidx.cardview.widget.CardView>
+version https://git-lfs.github.com/spec/v1
+oid sha256:135e4ce0629b19052da87e240f7437d3852ae4026f304b1e9bc2aa3278c5476c
+size 2070
