--- a/app/src/main/res/layout/list_step_istruzioni_items.xml
+++ b/app/src/main/res/layout/list_step_istruzioni_items.xml
@@ -1,34 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:cardBackgroundColor="@color/white"
-    app:cardElevation="8dp"
-    android:layout_margin="4dp">
-    <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <ImageView
-            android:id="@+id/imageView_step_istruzioni_items"
-            android:scaleType="center"
-            android:layout_width="100dp"
-            android:layout_height="60dp"/>
-        <TextView
-            android:id="@+id/textView_step_istruzioni_item"
-            android:text="Item"
-            android:textStyle="normal"
-            android:textSize="18sp"
-            android:textAlignment="center"
-            android:textColor="@color/black"
-            android:padding="4dp"
-            android:singleLine="true"
-            android:marqueeRepeatLimit="marquee_forever"
-            android:ellipsize="marquee"
-            android:scrollHorizontally="true"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-    </LinearLayout>
-
-</androidx.cardview.widget.CardView>
+version https://git-lfs.github.com/spec/v1
+oid sha256:93a49e6704b2ae506fe12a6bbf0a42a2c43a8bf6f40cba694b01f56e4d230657
+size 1448
