--- a/app/src/main/res/layout/fragment_saved_place.xml
+++ b/app/src/main/res/layout/fragment_saved_place.xml
@@ -2,51 +2,88 @@
 <layout xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-<RelativeLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    tools:context=".maps.SavedPlaceFragment">
 
-            <androidx.cardview.widget.CardView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                app:cardCornerRadius="20dp"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                android:layout_marginTop="30dp"
-                android:layout_marginEnd="32dp"
-                android:layout_marginStart="32dp"
-                android:layout_marginBottom="30dp">
+    <data>
+        <variable
+            name="googlePlaceModel"
+            type="com.example.letmebeyourchef.model.GooglePlaceModel" />
+    </data>
 
-                <LinearLayout
-                    android:orientation="vertical"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:context=".maps.SavedPlaceFragment">
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            app:cardCornerRadius="20dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="32dp"
+            android:layout_marginStart="32dp"
+            android:layout_marginBottom="20dp">
+
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <TextView
+                    android:text="@string/not_ready"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="24dp"
+                    android:textStyle="bold"
+                    android:textAlignment="center"
+                    android:id="@+id/textViewWorkInProgress"
+                    android:layout_marginBottom="20dp"/>
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="300dp"
+                    android:id="@+id/imageViewProgrammer"
+                    android:layout_marginBottom="20dp"/>
+
+                <ScrollView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
-
-                    <TextView
-                        android:text="@string/not_ready"
+                    <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:textSize="24dp"
-                        android:textStyle="bold"
-                        android:textAlignment="center"
-                        android:id="@+id/textViewWorkInProgress"/>
+                        android:orientation="vertical"
+                        android:gravity="center">
+                        <TextView
+                            android:text="@string/meanwhile"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:textSize="24dp"
+                            android:textStyle="bold"
+                            android:textAlignment="center"
+                            android:id="@+id/textMeanwhile"
+                            android:layout_marginBottom="7dp"/>
+                        <ImageView
+                            android:id="@+id/imageView71"
+                            android:layout_marginBottom="7dp"
+                            android:layout_width="30dp"
+                            android:layout_height="30dp"
+                            android:backgroundTint="@color/orange_primary_dark"
+                            android:src="@drawable/baseline_arrow_circle_down_24"
+                            app:tint="@color/black_overlay" />
+                        <ImageView
+                            android:id="@+id/imageView74"
+                            android:layout_marginBottom="20dp"
+                            android:layout_width="60dp"
+                            android:layout_height="60dp"
+                            android:backgroundTint="@color/orange_primary_dark"
+                            android:src="@{googlePlaceModel.saved==true?@drawable/ic_bookmarked:@drawable/ic_bookmark}"
+                            app:tint="@color/green" />
+                    </LinearLayout>
+                </ScrollView>
 
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:id="@+id/imageViewProgrammer"/>
-
-                    <TextView
-                        android:text="@string/meanwhile"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:textSize="24dp"
-                        android:textStyle="bold"
-                        android:textAlignment="center"
-                        android:id="@+id/textMeanwhile"/>
                 </LinearLayout>
 
             </androidx.cardview.widget.CardView>
@@ -61,5 +98,5 @@
         android:scrollbars="none"
         tools:listitem="@layout/saved_item_layout" />
 
-</RelativeLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
     </layout>
