--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -3,19 +3,19 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/btnHome"
-            android:icon="@drawable/ic_map"
+            android:icon="@android:drawable/ic_menu_mapmode"
             android:title="Map" />
         <item
-            android:id="@+id/btnSetting"
-            android:icon="@drawable/ic_rating"
+            android:id="@+id/btnRatePlaces"
+            android:icon="@android:drawable/ic_menu_compass"
             android:title="Rate Places" />
         <item
             android:id="@+id/btnSavedPlaces"
-            android:icon="@drawable/ic_location"
+            android:icon="@android:drawable/ic_menu_myplaces"
             android:title="Saved Places" />
         <item
             android:id="@+id/btnOptRoutes"
-            android:icon="@drawable/ic_stonks"
+            android:icon="@android:drawable/ic_menu_mylocation"
             android:title="Optimize your routes" />
 
     </group>
@@ -24,8 +24,9 @@
         <menu>
             <item
                 android:id="@+id/btnHelp"
-                android:icon="@drawable/ic_work"
                 android:ellipsize="marquee"
+                android:enabled="false"
+                android:icon="@android:drawable/ic_menu_preferences"
                 android:marqueeRepeatLimit="marquee_forever"
                 android:scrollHorizontally="true"
                 android:title="Work in progress..." />
@@ -33,6 +34,7 @@
                 android:ellipsize="marquee"
                 android:marqueeRepeatLimit="marquee_forever"
                 android:scrollHorizontally="true"
+                android:enabled="false"
                 android:title="And always more!" />
         </menu>
     </item>
