--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,3 +1,147 @@
-version https://git-lfs.github.com/spec/v1
-oid sha256:100f87d7cdcbfc73f97320b8e06cf894c4ecf874fbbee77992d5b84fcaede1ea
-size 6074
+<?xml version="1.0" encoding="utf-8"?>
+<androidx.constraintlayout.widget.ConstraintLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:context=".autenticazione.LoginActivity"
+        android:background="@color/white">
+
+    <ImageView
+            android:layout_width="338dp"
+            android:layout_height="138dp" app:srcCompat="@drawable/logo_no_background"
+            android:id="@+id/imageView2"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintHorizontal_bias="0.493" android:layout_marginTop="5dp"/>
+
+    <TextView
+        android:id="@+id/TitleLog"
+        android:layout_width="146dp"
+        android:layout_height="60dp"
+        android:layout_marginBottom="60dp"
+        android:text="Sign in"
+        android:textAlignment="center"
+        android:textColor="@color/black"
+        android:textSize="35sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/InputEmailLogin"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <EditText
+        android:id="@+id/InputEmailLogin"
+        android:layout_width="300dp"
+        android:layout_height="65dp"
+        android:layout_marginBottom="40dp"
+        android:background="@drawable/input_bg_blue"
+        android:backgroundTint="@color/orange"
+        android:drawableLeft="@drawable/ic_email"
+        android:drawablePadding="10dp"
+        android:ems="10"
+        android:hint="@string/email"
+        android:inputType="textEmailAddress"
+        android:paddingLeft="20dp"
+        android:paddingTop="10dp"
+        android:paddingRight="20dp"
+        android:paddingBottom="10dp"
+        android:textColor="@color/white"
+        android:textColorHint="@color/white"
+        android:textSize="25sp"
+        app:layout_constraintBottom_toTopOf="@+id/InputPasswordLogin"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <EditText
+        android:id="@+id/InputPasswordLogin"
+        android:layout_width="300dp"
+        android:layout_height="65dp"
+        android:layout_marginBottom="180dp"
+        android:background="@drawable/input_bg_blue"
+        android:backgroundTint="@color/orange"
+        android:drawableLeft="@mipmap/baseline_password_white_24"
+        android:drawablePadding="10dp"
+        android:ems="10"
+        android:hint="@string/password"
+        android:inputType="textPassword"
+        android:paddingLeft="20dp"
+        android:paddingTop="10dp"
+        android:paddingRight="20dp"
+        android:paddingBottom="10dp"
+        android:textColor="@color/white"
+        android:textColorHint="@color/white"
+        android:textSize="25sp"
+        app:layout_constraintBottom_toTopOf="@+id/btnLogin"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/or"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="or"
+        app:layout_constraintTop_toBottomOf="@+id/forgotPass"
+        app:layout_constraintBottom_toTopOf="@+id/sign_in_button"
+        android:gravity="center"
+        android:layout_marginTop="10dp"/>
+
+    <com.google.android.gms.common.SignInButton
+        android:id="@+id/sign_in_button"
+        android:layout_width="250dp"
+        android:layout_height="50dp"
+        android:ems="10"
+        android:text="@string/sign_in_with_google"
+        app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
+        android:textColor="@color/white" android:background="@drawable/input_bg_blue"
+        android:layout_marginTop="10dp"
+        app:layout_constraintTop_toBottomOf="@+id/or" android:layout_marginStart="30dp"
+        android:layout_marginEnd="35dp" />
+
+    <Button
+        android:id="@+id/btnLogin"
+        android:layout_width="225dp"
+        android:layout_height="65dp"
+        android:layout_marginBottom="48dp"
+        android:background="@drawable/animazione_1"
+        android:text="Login"
+        android:textColor="@color/black"
+        android:textSize="25sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/forgotPass"
+        android:layout_width="177dp"
+        android:layout_height="31dp"
+        android:layout_marginBottom="-31dp"
+        android:clickable="true"
+        android:background="@drawable/shape_grey"
+        android:text="Password forgotten?"
+        android:textStyle="bold"
+        android:textSize="15sp"
+        android:gravity="center"
+        android:scrollbars="vertical"
+        app:layout_constraintBottom_toBottomOf="@+id/InputPasswordLogin"
+        app:layout_constraintEnd_toEndOf="@+id/InputPasswordLogin" />
+
+    <ProgressBar
+            style="?android:attr/progressBarStyle"
+            android:id="@+id/progressBar2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:indeterminateDrawable="@drawable/progress_bg_orange"
+            android:progress="0"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/btnLogin"
+            app:layout_constraintTop_toBottomOf="@+id/sign_in_button"/>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
