--- a/app/src/main/res/layout/activity_profilo.xml
+++ b/app/src/main/res/layout/activity_profilo.xml
@@ -26,7 +26,7 @@
             android:layout_height="0dp"
             app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginTop="30dp" app:layout_constraintTop_toBottomOf="@+id/textView12"
-            android:layout_marginStart="50dp" android:layout_marginEnd="50dp"
+            android:layout_marginStart="30dp" android:layout_marginEnd="30dp"
             app:layout_constraintBottom_toTopOf="@+id/btn_salva" android:layout_marginBottom="30dp"
             app:layout_constraintVertical_bias="0.0">
         <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
@@ -167,20 +167,30 @@
                         android:layout_height="match_parent"
                         android:id="@+id/textView88"
                         android:layout_weight="1"/>
+
                 <Button
-                        android:layout_width="150dp"
-                        android:gravity="center"
-                        android:textSize="16sp"
-                        android:layout_height="43dp"
-                        android:inputType="textPersonName"
-                        android:layout_marginTop="5dp"
-                        android:layout_marginBottom="5dp"
-                        android:layout_marginEnd="15dp"
-                        android:text="Change password"
-                        android:textColor="@color/black"
-                        android:textColorHint="@color/black"
-                        android:ems="10"
-                        android:id="@+id/btn_cambio_pass" android:layout_weight="1"/>
+                    android:id="@+id/btn_cambio_pass"
+                    android:layout_width="150dp"
+                    android:layout_height="43dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginEnd="15dp"
+                    android:layout_marginBottom="5dp"
+                    android:layout_weight="1"
+                    android:ellipsize="marquee"
+                    android:ems="10"
+                    android:fadeScrollbars="false"
+                    android:gravity="center"
+                    android:inputType="textPersonName"
+                    android:isScrollContainer="true"
+                    android:marqueeRepeatLimit="marquee_forever"
+                    android:overScrollMode="ifContentScrolls"
+                    android:scrollbars="horizontal"
+                    android:scrollHorizontally="true"
+                    android:singleLine="true"
+                    android:text="Change password"
+                    android:textColor="@color/black"
+                    android:textColorHint="@color/black"
+                    android:textSize="16sp" />
             </LinearLayout>
 
             <LinearLayout
