--- a/app/src/main/res/layout/fragment_homepage.xml
+++ b/app/src/main/res/layout/fragment_homepage.xml
@@ -35,6 +35,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:gravity="center"
+                    android:scrollbars="vertical"
                     android:text="Welcome! We hope you will find recipes you like here, or use the other functionalities to get helped for your daily meal!"
                     android:textColor="@color/black_overlay"
                     android:textSize="15sp" />
