--- a/app/src/main/res/layout/fragment_ricette_preferite.xml
+++ b/app/src/main/res/layout/fragment_ricette_preferite.xml
@@ -1,3 +1,72 @@
-version https://git-lfs.github.com/spec/v1
-oid sha256:8809c4e9d5635e32ad4dd32f08dc023be6cf53452414bdb58c8d30f96974e908
-size 3166
+<?xml version="1.0" encoding="utf-8"?>
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+    <data>
+        <variable
+            name="viewModel"
+            type="com.example.letmebeyourchef.ricette_preferite.RicettePreferiteViewModel"/>
+    </data>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:context=".ricette_preferite.RicettePreferiteFragment">
+
+        <ScrollView
+            android:id="@+id/scrollView2"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0"
+            android:layout_marginBottom="50dp"/>
+        <LinearLayout
+            android:layout_marginBottom="15dp"
+            app:layout_constraintTop_toTopOf="parent"
+            android:id="@+id/linear" android:layout_width="match_parent" android:layout_height="100dp"
+            android:orientation="vertical">
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:background="@drawable/shape_intro"
+                android:layout_height="100dp"
+                android:gravity="center"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/agg_toolbar"
+                android:id="@+id/linearLayout18">
+
+                <TextView
+                    android:id="@+id/preferiti_title"
+                    android:layout_width="318dp"
+                    android:layout_height="wrap_content"
+                    android:text="Here is the list of your favourite recipes: LetMeShowThem for you, and add more when you see the LIKE IT! button."
+                    android:gravity="center"
+                    android:layout_gravity="center"
+                    android:scrollbars="vertical"
+                    android:textColor="@color/black_overlay"
+                    android:textSize="15sp"
+                    />
+            </LinearLayout>
+        </LinearLayout>
+
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycler_ricette_preferite"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_marginBottom="60dp"
+            android:layout_margin="4dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/linear"
+            app:layout_constraintBottom_toBottomOf="parent"
+            >
+
+        </androidx.recyclerview.widget.RecyclerView>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
