--- a/app/src/main/res/layout/list_ingredienti_cart.xml
+++ b/app/src/main/res/layout/list_ingredienti_cart.xml
@@ -1,3 +1,82 @@
-version https://git-lfs.github.com/spec/v1
-oid sha256:04a750d59e913591b2fba7853561ddecbacd86df1602d55b82af902f061dbd17
-size 3142
+<?xml version="1.0" encoding="utf-8"?>
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    app:cardBackgroundColor="@color/white"
+    android:id="@+id/ingredients_list_container"
+    app:cardElevation="8dp"
+    android:layout_margin="8dp"
+    android:layout_gravity="center_horizontal"
+    android:backgroundTint="@color/blue_white"
+    app:cardCornerRadius="20dp">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center_horizontal">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:gravity="center_horizontal"
+        android:layout_weight="2">
+
+        <ImageView
+            android:id="@+id/imageView_ingredienti_cart"
+            android:scaleType="center"
+            android:layout_width="80dp"
+            android:layout_height="50dp"/>
+        <TextView
+            android:id="@+id/textView_nome_ingredienti_cart"
+            android:text="Pollo"
+            android:singleLine="true"
+            android:ellipsize="marquee"
+            android:marqueeRepeatLimit="marquee_forever"
+            android:scrollHorizontally="true"
+            android:textSize="16sp"
+            android:textAlignment="center"
+            android:textColor="@color/black"
+            android:textStyle="bold"
+            android:padding="4dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ellipsize="marquee"
+            android:marqueeRepeatLimit="marquee_forever"
+            android:padding="4dp"
+            android:scrollHorizontally="true"
+            android:singleLine="true"
+            android:text="to buy"
+            android:textAlignment="center"
+            android:textColor="@color/black"
+            android:textSize="16sp"
+            android:id="@+id/textView_quantita_ingredienti" />
+    </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_gravity="center"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:layout_marginStart="20dp"
+            android:layout_weight="1">
+
+            <Button
+                android:id="@+id/bought_btn"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="20dp"
+                android:layout_weight="1"
+                android:backgroundTint="@color/app_green"
+                android:text="Bought"
+                app:icon="@drawable/ic_money" />
+
+        </LinearLayout>
+    </LinearLayout>
+
+</androidx.cardview.widget.CardView>
